# apps/app/api/index.ts
@@ -9,12 +9,18 @@ export {
     createSubcategory,
     createSubscription,
     createTransaction,
+    deleteCategories,
     deleteCategory,
     deleteFinancialAccount,
+    deleteFinancialAccounts,
     deleteImport,
+    deleteImports,
+    deleteSubcategories,
     deleteSubcategory,
     deleteSubscription,
+    deleteSubscriptions,
     deleteTransaction,
+    deleteTransactions,
     getAuthenticatedUser,
     getCategories,
     getCategoryById,
@@ -117,8 +123,14 @@ export type {
     CreateTransactionResponses,
     CurrencyEnum,
     DashboardLayout,
+    DashboardLayoutItem,
     DateFilter,
     DateFormatEnum,
+    DeleteCategoriesData,
+    DeleteCategoriesError,
+    DeleteCategoriesErrors,
+    DeleteCategoriesResponse,
+    DeleteCategoriesResponses,
     DeleteCategoryData,
     DeleteCategoryError,
     DeleteCategoryErrors,
@@ -131,12 +143,27 @@ export type {
     DeleteFinancialAccountResponse,
     DeleteFinancialAccountResponse2,
     DeleteFinancialAccountResponses,
+    DeleteFinancialAccountsData,
+    DeleteFinancialAccountsError,
+    DeleteFinancialAccountsErrors,
+    DeleteFinancialAccountsResponse,
+    DeleteFinancialAccountsResponses,
     DeleteImportData,
     DeleteImportError,
     DeleteImportErrors,
     DeleteImportResponse,
     DeleteImportResponse2,
     DeleteImportResponses,
+    DeleteImportsData,
+    DeleteImportsError,
+    DeleteImportsErrors,
+    DeleteImportsResponse,
+    DeleteImportsResponses,
+    DeleteSubcategoriesData,
+    DeleteSubcategoriesError,
+    DeleteSubcategoriesErrors,
+    DeleteSubcategoriesResponse,
+    DeleteSubcategoriesResponses,
     DeleteSubcategoryData,
     DeleteSubcategoryError,
     DeleteSubcategoryErrors,
@@ -149,12 +176,22 @@ export type {
     DeleteSubscriptionResponse,
     DeleteSubscriptionResponse2,
     DeleteSubscriptionResponses,
+    DeleteSubscriptionsData,
+    DeleteSubscriptionsError,
+    DeleteSubscriptionsErrors,
+    DeleteSubscriptionsResponse,
+    DeleteSubscriptionsResponses,
     DeleteTransactionData,
     DeleteTransactionError,
     DeleteTransactionErrors,
     DeleteTransactionResponse,
     DeleteTransactionResponse2,
     DeleteTransactionResponses,
+    DeleteTransactionsData,
+    DeleteTransactionsError,
+    DeleteTransactionsErrors,
+    DeleteTransactionsResponse,
+    DeleteTransactionsResponses,
     ErrorResponse,
     FileTypeEnum,
     FilterOptions,
@@ -179,6 +216,7 @@ export type {
     GetCategoryByIdResponses,
     GetCategoryListResponse,
     GetCategoryResponse,
+    GetDashboardLayout,
     GetDashboardLayoutData,
     GetDashboardLayoutError,
     GetDashboardLayoutErrors,
